Fixed Overflow Issues

--- a/src/app/admin/dashboard/dashboard-content/dashboard-info/dashboard-info.component.scss
+++ b/src/app/admin/dashboard/dashboard-content/dashboard-info/dashboard-info.component.scss
@@ -1,3 +1,7 @@
+*{
+  overflow: visible !important;
+}
+
 .myColor{
   color: black;
 
@@ -7,8 +11,7 @@
   list-style: none;
 }
 
-
-
 .myNiceForm{
 
 }
+
